# Jotunn

./: .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  pacman_install_deps.sh
Applications/: Makefile
Applications/JotunnApplication/: CMakeLists.txt  Makefile
Applications/JotunnApplication/res/: fragment_shader.frag
Applications/JotunnApplication/src/: JotunnApplication.cpp  TestLayer.cpp
Applications/JotunnApplication2D/: Makefile
Applications/JotunnApplication2D/include/: TestLayer.h
Applications/JotunnApplication2D/res/: vertex_shader.vert
Applications/JotunnApplication2D/src/: JotunnApplication.cpp  TestLayer.cpp
Jotunn/: CMakeLists.txt  Makefile
Jotunn/Engine/: Makefile
Jotunn/Engine/include/: Jotunn.h
Jotunn/Engine/include/Core/Engine/: Application.h  EntryPoint.h  ImGuiLayer.h  Input.h  Timestep.h
Jotunn/Engine/include/Core/Event/: ApplicationEvent.h  KeyCodes.h  MouseButtonCodes.h
Jotunn/Engine/include/Graphics/: Graphics.h  PerspectiveCamera.h  RenderCommand.h  RenderingContext.h  Uniform.h  VertexArray.h
Jotunn/Engine/include/Graphics/API/: Buffer.h  Mesh.h  Scene.h  SceneObject.h  Shader.h  ShaderDataType.h  Uniform.h  VertexArray.h
Jotunn/Engine/include/Graphics/Camera/: PerspectiveCameraController.h
Jotunn/Engine/include/Graphics/MeshFactory/: CubeMeshGeomFactory.h  MeshGeomFactory.h  SphereMeshGeomFactory.h
Jotunn/Engine/include/Graphics/Render/: RenderCommand.h  Renderer.h  RendererAPI.h
Jotunn/Engine/include/Platform/Graphics/: OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLRenderingContext.h  OpenGLShader.h  OpenGLVertexArray.h
Jotunn/Engine/src/Core/Engine/: ImGuiLayer.cpp
Jotunn/Engine/src/Graphics/: Buffer.cpp  PerspectiveCamera.cpp  PerspectiveCameraController.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
Jotunn/Engine/src/Graphics/API/: Buffer.cpp  Mesh.cpp  Shader.cpp  VertexArray.cpp
Jotunn/Engine/src/Graphics/Camera/: PerspectiveCamera.cpp  PerspectiveCameraController.cpp
Jotunn/Engine/src/Graphics/IMGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
Jotunn/Engine/src/Graphics/Render/: RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp
Jotunn/Engine/src/Platform/Graphics/: OpenGLBuffer.cpp  OpenGLRenderingContext.cpp  OpenGLShader.cpp  OpenGLVertexArray.cpp
Jotunn/JotunnLib/: Makefile
Jotunn/JotunnLib/include/Debugging/Logging/: Log.h
Jotunn/JotunnLib/include/Math/: Matrix.h  Vector.h
Jotunn/JotunnLib/src/Debugging/Logging/: Log.cpp
Jotunn/JotunnLib/tests/: Makefile
Jotunn/JotunnLib/tests/MathTests/: Makefile
Jotunn/JotunnLib/tests/MathTests/VectorTests/: Makefile  VectorTests.cpp
Jotunn/include/Core/Debugging/Logging/: Log.h
Jotunn/include/Core/Engine/: Layer.h  LayerStack.h
Jotunn/include/Graphics/: Buffer.h  Graphics.h  Mesh.h  PerspectiveCameraController.h  Renderer.h  RendererAPI.h  SceneObject.h  Shader.h
Jotunn/include/Graphics/MeshFactory/: SphereMeshGeomFactory.h
Jotunn/include/Math/: Vector.h
Jotunn/include/Platform/Graphics/: OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLRenderingContext.h  OpenGLVertexArray.h
Jotunn/src/: Jotunn.h
Jotunn/src/Core/: CoreInclude.h
Jotunn/src/Core/Debugging/Logging/: Log.cpp  Log.h
Jotunn/src/Core/Engine/: Application.cpp  Application.h  EntryPoint.cpp  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.h
Jotunn/src/Core/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Jotunn/src/Core/Util/: FileParse.h
Jotunn/src/Engine/: Application.cpp  Application.h  EntryPoint.h
Jotunn/src/Graphics/: Buffer.cpp  Buffer.h  Graphics.h  Mesh.cpp  Mesh.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RenderingContext.h  SceneObject.h  Shader.cpp  Shader.h  Uniform.h  VertexArray.cpp  VertexArray.h
Jotunn/src/Graphics/MeshFactory/: CubeMeshGeomFactory.h  MeshGeomFactory.h  SphereMeshGeomFactory.h
Jotunn/src/Platform/: GLFWWindow.cpp  GLFWWindow.h
Jotunn/src/Platform/Graphics/: OpenGLBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRenderingContext.cpp  OpenGLRenderingContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLUniform.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Jotunn/src/Platform/Windowing/: GLFWWindow.cpp  GLFWWindow.h
Jotunn/src/Platform/Windowing/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
JotunnApplication/: CMakeLists.txt
JotunnApplication/res/: fragment_shader.frag  vertex_shader.vert
JotunnApplication/src/: JotunnApplication.cpp  TestLayer.cpp  TestLayer.h
